no java 5 deps Issue number: Obtained from: Submitted by: Reviewed by: